--- a/templates/index.html
+++ b/templates/index.html
@@ -2,39 +2,100 @@
 <html>
 <head>
     <title>condo3</title>
+    <meta charset="utf-8">
     <link rel="stylesheet" href="/public/css/main.css">
 </head>
 <body>
-<h1 class="title">
-    Bulma
-</h1>
-
-<p class="subtitle">
-    Modern CSS framework based on <a href="https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Flexible_Box_Layout/Basic_Concepts_of_Flexbox">Flexbox</a>
-</p>
-
-<div class="field">
-    <div class="control">
-        <input class="input" type="text" placeholder="Input">
+<section class="hero is-primary is-bold">
+    <div class="hero-body">
+        <div class="container">
+            <h1 class="title">
+                condo3
+            </h1>
+            <h2 class="subtitle">
+                condo3は <a href="https://connpass.com/">connpass</a> と <a href="https://www.doorkeeper.jp/">Doorkeeper</a> のグループのイベント情報をiCalendarやAtomで取得するためのサイトです
+            </h2>
+        </div>
     </div>
-</div>
+</section>
 
-<div class="field">
-    <p class="control">
-          <span class="select">
-            <select>
-              <option>Select dropdown</option>
-            </select>
-          </span>
-    </p>
-</div>
+<section>
+    <div class="container">
+        <div class="field is-horizontal">
+            <div class="field-label">
+                <label class="label">サイト</label>
+            </div>
+            <div class="field-body">
+                <div class="field is-grouped is-narrow">
+                    <div class="control">
+                        <label class="radio">
+                            <input type="radio" name="site" checked>
+                            Connpass
+                        </label>
+                        <label class="radio">
+                            <input type="radio" name="site">
+                            Doorkeeper
+                        </label>
+                    </div>
+                </div>
+            </div>
+        </div>
 
-<div class="buttons">
-    <a class="button is-primary">Primary</a>
-    <a class="button is-link">Link</a>
-</div>
+        <div class="field is-horizontal">
+            <div class="field-label">
+                <label class="label">フォーマット</label>
+            </div>
+            <div class="field-body">
+                <div class="field is-grouped is-narrow">
+                    <div class="control">
+                        <label class="radio">
+                            <input type="radio" name="format" checked>
+                            Atom
+                        </label>
+                        <label class="radio">
+                            <input type="radio" name="format">
+                            iCalendar
+                        </label>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="field is-horizontal">
+            <div class="field-label">
+                <label class="label">グループ名</label>
+            </div>
+            <div class="field-body">
+                <div class="field">
+                    <div class="control">
+                        <input class="input is-danger" type="text">
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="field is-horizontal">
+            <div class="field-label">
+                <label class="label">URL</label>
+            </div>
+            <div class="field-body">
+                <div class="field">
+                    <div class="control">
+                        <input class="input" type="text" value="https://condo3.appspot.com/" readonly>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
 
 <div id="app"></div>
+
+<footer class="footer">
+    <div class="content has-text-centered">
+        <p>&copy; <a href="https://github.com/sue445">@sue445</a> 2019- </p>
+    </div>
+</footer>
 
 </body>
 <script src="/public/js/build.js"></script>
