--- a/templates/index.html
+++ b/templates/index.html
@@ -19,77 +19,9 @@
     </div>
 </section>
 
-<section>
-    <div class="container">
-        <div class="field is-horizontal">
-            <div class="field-label">
-                <label class="label">サイト</label>
-            </div>
-            <div class="field-body">
-                <div class="field is-grouped is-narrow">
-                    <div class="control">
-                        <label class="radio">
-                            <input type="radio" name="site" checked>
-                            Connpass
-                        </label>
-                        <label class="radio">
-                            <input type="radio" name="site">
-                            Doorkeeper
-                        </label>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div class="field is-horizontal">
-            <div class="field-label">
-                <label class="label">フォーマット</label>
-            </div>
-            <div class="field-body">
-                <div class="field is-grouped is-narrow">
-                    <div class="control">
-                        <label class="radio">
-                            <input type="radio" name="format" checked>
-                            Atom
-                        </label>
-                        <label class="radio">
-                            <input type="radio" name="format">
-                            iCalendar
-                        </label>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div class="field is-horizontal">
-            <div class="field-label">
-                <label class="label">グループ名</label>
-            </div>
-            <div class="field-body">
-                <div class="field">
-                    <div class="control">
-                        <input class="input is-danger" type="text">
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div class="field is-horizontal">
-            <div class="field-label">
-                <label class="label">URL</label>
-            </div>
-            <div class="field-body">
-                <div class="field">
-                    <div class="control">
-                        <input class="input" type="text" value="https://condo3.appspot.com/" readonly>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
-
-<div id="app"></div>
+<div id="app">
+    <app></app>
+</div>
 
 <footer class="footer">
     <div class="content has-text-centered">
