--- a/templates/index.html
+++ b/templates/index.html
@@ -30,5 +30,6 @@
 </footer>
 
 </body>
+<script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
 <script src="/public/js/build.js"></script>
 </html>
