--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="/public/css/main.css">
 </head>
 <body>
+<a href="https://github.com/sue445/condo3"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" alt="Fork me on GitHub"></a>
+
 <section class="hero is-primary is-bold">
     <div class="hero-body">
         <div class="container">
