--- a/templates/index.html
+++ b/templates/index.html
@@ -28,6 +28,7 @@
 <footer class="footer">
     <div class="content has-text-centered">
         <p>&copy; <a href="https://github.com/sue445">@sue445</a> 2019- </p>
+        <p>Repo <a href="https://github.com/sue445/condo3">https://github.com/sue445/condo3</a></p>
     </div>
 </footer>
 
