--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,18 @@
 <html>
 <head>
     <title>condo3</title>
+
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="keywords" content="connpass,Doorkeeper,Atom,iCalendar">
+    <meta name="description" content="connpassとDoorkeeperのグループのイベント情報をiCalendarやAtomで取得するためのサイト">
+
+    <meta property="og:locale" content="ja_JP" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="condo3" />
+    <meta property="og:description" content="connpassとDoorkeeperのグループのイベント情報をiCalendarやAtomで取得するためのサイト" />
+    <meta property="og:url" content="https://condo3.appspot.com/" />
+
     <link rel="stylesheet" href="/public/css/main.css">
 </head>
 <body>
