--- a/templates/index.html
+++ b/templates/index.html
@@ -5,13 +5,13 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="keywords" content="connpass,Doorkeeper,Atom,iCalendar">
-    <meta name="description" content="connpassとDoorkeeperのグループのイベント情報をiCalendarやAtomで取得するためのサイト">
+    <meta name="keywords" content="¥Doorkeeper,Atom,iCalendar">
+    <meta name="description" content="Doorkeeperのグループのイベント情報をiCalendarやAtomで取得するためのサイト">
 
     <meta property="og:locale" content="ja_JP" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="condo3" />
-    <meta property="og:description" content="connpassとDoorkeeperのグループのイベント情報をiCalendarやAtomで取得するためのサイト" />
+    <meta property="og:description" content="Doorkeeperのグループのイベント情報をiCalendarやAtomで取得するためのサイト" />
     <meta property="og:url" content="https://condo3.appspot.com/" />
 
     <link rel="stylesheet" href="/public/css/main.css">
@@ -26,7 +26,7 @@
                 condo3
             </h1>
             <h2 class="subtitle">
-                condo3は <a href="https://connpass.com/">connpass</a> と <a href="https://www.doorkeeper.jp/">Doorkeeper</a> のグループのイベント情報をiCalendarやAtomで取得するためのサイトです
+                condo3は <a href="https://www.doorkeeper.jp/">Doorkeeper</a> のグループのイベント情報をiCalendarやAtomで取得するためのサイトです
             </h2>
         </div>
     </div>
